--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -5245,10 +5245,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: gmaps in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (0.9.0)\n",
+      "Requirement already satisfied: geojson>=2.0.0 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from gmaps) (2.5.0)\n",
+      "Requirement already satisfied: ipywidgets>=7.0.0 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from gmaps) (7.5.1)\n",
+      "Requirement already satisfied: six in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from gmaps) (1.14.0)\n",
+      "Requirement already satisfied: ipython>=5.3.0 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from gmaps) (7.13.0)\n",
+      "Requirement already satisfied: traitlets>=4.3.0 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from gmaps) (4.3.3)\n",
+      "Requirement already satisfied: widgetsnbextension~=3.5.0 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from ipywidgets>=7.0.0->gmaps) (3.5.1)\n",
+      "Requirement already satisfied: nbformat>=4.2.0 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from ipywidgets>=7.0.0->gmaps) (5.0.6)\n",
+      "Requirement already satisfied: ipykernel>=4.5.1 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from ipywidgets>=7.0.0->gmaps) (5.1.4)\n",
+      "Requirement already satisfied: appnope; sys_platform == \"darwin\" in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from ipython>=5.3.0->gmaps) (0.1.0)\n",
+      "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from ipython>=5.3.0->gmaps) (3.0.4)\n",
+      "Requirement already satisfied: setuptools>=18.5 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from ipython>=5.3.0->gmaps) (46.4.0.post20200518)\n",
+      "Requirement already satisfied: pickleshare in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from ipython>=5.3.0->gmaps) (0.7.5)\n",
+      "Requirement already satisfied: pexpect; sys_platform != \"win32\" in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from ipython>=5.3.0->gmaps) (4.8.0)\n",
+      "Requirement already satisfied: pygments in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from ipython>=5.3.0->gmaps) (2.6.1)\n",
+      "Requirement already satisfied: jedi>=0.10 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from ipython>=5.3.0->gmaps) (0.15.2)\n",
+      "Requirement already satisfied: backcall in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from ipython>=5.3.0->gmaps) (0.1.0)\n",
+      "Requirement already satisfied: decorator in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from ipython>=5.3.0->gmaps) (4.4.2)\n",
+      "Requirement already satisfied: ipython-genutils in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from traitlets>=4.3.0->gmaps) (0.2.0)\n",
+      "Requirement already satisfied: notebook>=4.4.1 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (6.0.3)\n",
+      "Requirement already satisfied: jsonschema!=2.5.0,>=2.4 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from nbformat>=4.2.0->ipywidgets>=7.0.0->gmaps) (3.2.0)\n",
+      "Requirement already satisfied: jupyter-core in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from nbformat>=4.2.0->ipywidgets>=7.0.0->gmaps) (4.6.3)\n",
+      "Requirement already satisfied: jupyter-client in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from ipykernel>=4.5.1->ipywidgets>=7.0.0->gmaps) (6.1.3)\n",
+      "Requirement already satisfied: tornado>=4.2 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from ipykernel>=4.5.1->ipywidgets>=7.0.0->gmaps) (6.0.4)\n",
+      "Requirement already satisfied: wcwidth in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->ipython>=5.3.0->gmaps) (0.1.9)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from pexpect; sys_platform != \"win32\"->ipython>=5.3.0->gmaps) (0.6.0)\n",
+      "Requirement already satisfied: parso>=0.5.2 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from jedi>=0.10->ipython>=5.3.0->gmaps) (0.5.2)\n",
+      "Requirement already satisfied: nbconvert in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (5.6.1)\n",
+      "Requirement already satisfied: prometheus-client in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (0.7.1)\n",
+      "Requirement already satisfied: pyzmq>=17 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (18.1.1)\n",
+      "Requirement already satisfied: Send2Trash in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (1.5.0)\n",
+      "Requirement already satisfied: jinja2 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (2.11.2)\n",
+      "Requirement already satisfied: terminado>=0.8.1 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (0.8.3)\n",
+      "Requirement already satisfied: attrs>=17.4.0 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from jsonschema!=2.5.0,>=2.4->nbformat>=4.2.0->ipywidgets>=7.0.0->gmaps) (19.3.0)\n",
+      "Requirement already satisfied: pyrsistent>=0.14.0 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from jsonschema!=2.5.0,>=2.4->nbformat>=4.2.0->ipywidgets>=7.0.0->gmaps) (0.16.0)\n",
+      "Requirement already satisfied: importlib-metadata; python_version < \"3.8\" in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from jsonschema!=2.5.0,>=2.4->nbformat>=4.2.0->ipywidgets>=7.0.0->gmaps) (1.6.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from jupyter-client->ipykernel>=4.5.1->ipywidgets>=7.0.0->gmaps) (2.8.1)\n",
+      "Requirement already satisfied: testpath in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (0.4.4)\n",
+      "Requirement already satisfied: mistune<2,>=0.8.1 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (0.8.4)\n",
+      "Requirement already satisfied: defusedxml in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (0.6.0)\n",
+      "Requirement already satisfied: pandocfilters>=1.4.1 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (1.4.2)\n",
+      "Requirement already satisfied: bleach in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (3.1.4)\n",
+      "Requirement already satisfied: entrypoints>=0.2.2 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (0.3)\n",
+      "Requirement already satisfied: MarkupSafe>=0.23 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from jinja2->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (1.1.1)\n",
+      "Requirement already satisfied: zipp>=0.5 in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from importlib-metadata; python_version < \"3.8\"->jsonschema!=2.5.0,>=2.4->nbformat>=4.2.0->ipywidgets>=7.0.0->gmaps) (3.1.0)\n",
+      "Requirement already satisfied: webencodings in /Users/karenp/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages (from bleach->nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->gmaps) (0.5.1)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install gmaps"
+   ]
   },
   {
    "cell_type": "code",
