challenge complete with images and csv files.

--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -25,7 +25,7 @@
     {
      "data": {
       "text/plain": [
-       "<zip at 0x1a20073460>"
+       "<zip at 0x1a276a0870>"
       ]
      },
      "execution_count": 2,
